--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -6,7 +6,7 @@ header.header
     li.nav__item(class= drop)
       a(href='ui-kit.html')= item
   
-  //-block nav
+  block nav
     .header__nav.nav
       ul.nav__items
         +nav-item('', 'О нас')
