--- a/src/pages/base.pug
+++ b/src/pages/base.pug
@@ -4,6 +4,6 @@ html(lang="ru")
     title Landing page
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
   body
-    block header2
-    block content2
-    block footer2
+    block header
+    block content
+    block footer
