Switch dist to docs

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,7 +6,7 @@ block header
     
 block content
   .content
-    form(action="/search-room.html" method="get" class="search-rooms-form")
+    form(action="search-room.html" method="get" class="search-rooms-form")
       h2.form-title Найдем номера под ваши пожелания
       
       .full-form-1
