--- a/src/assets/page-layout/index.scss
+++ b/src/assets/page-layout/index.scss
@@ -110,3 +110,55 @@
     }
   }
 }
+
+.footer {
+  display: grid;
+  grid-template-columns: auto 260px 640px 260px auto;
+  grid-template-rows: 372px 70px;
+  grid-template-areas:
+    ". a r s ."
+    ". c c c .";
+  grid-gap: 1px 0;
+  max-width: 1440px;
+  height: 442px;
+  margin: 0 auto;
+  background-color: white;
+
+  &__logo {
+    grid-area: a;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;    
+  }
+
+  &__relation-lists {
+    grid-area: r;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  &__subscribe {
+    grid-area: s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;   
+  }
+}
+
+.subscribe {
+  &__title {
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 18px;
+  }
+  p {
+    margin: 0;
+  }
+  input {
+    max-width: 260px;
+    margin-top: 22px;
+  }
+}
