--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,38 +1,35 @@
 //- footer block
-footer.footer
-  block about
-    .about
-      .header__logo
-      .description Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды» 
-  
-  mixin relation-list(title, ...items)
-    .relation__list
-      h3.relation__title= title
-      ul.relation__items
-        each item in items
-          li.relation__item
-            a(href='#')= item
+include ./../logo/logo.pug
+include ./../list-items/list-items.pug
 
-  block relation
-    .relation
-      +relation-list('Навигация', 'О нас', 'Новости', 'Служба поддержки', 'Услуги')
-      +relation-list('О нас', 'О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы')
-      +relation-list('Служба поддержки', 'Соглашения', 'Сообщества', 'Связь с нами')
+-
+  var data_relation_1 = {title: 'Navigation', relations: ['About Us', 'News', 'Support', 'Products']}
+  var data_relation_2 = {title: 'About Us', relations: ['Who we are', 'Our team', 'Careers', 'Investors']}
+  var data_relation_3 = {title: 'Support', relations: ['Documentation', 'Community', 'Get in Touch']}
+
+footer.footer
+  .footer__logo
+    +logo('./src/components/logo/Logo-grad.svg')
+    .description Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.
   
-  block subscribe
+  .footer__relation-lists
+    +relation-list(data_relation_1)
+    +relation-list(data_relation_2)
+    +relation-list(data_relation_2)
+  
+  .footer__subscribe
     .subscribe
-      h3.subscribe__title Подписка
-      p Получайте специальные предложения и новости сервиса
+      h3.subscribe__title Subscribe to our newsletter
+      p Receive our latest news and promotions in your inbox!
       input(type='text' name='email')
 
-  block copyright
-    .copyright
-      .copyright__text Copyright © 2018 Toxin отель. Все права зачищены.
-      .social-bar
-        a(href='#')
-          span(title='twitter').twitter.icon
-        a(href='#')
-          span(title='facebook').facebook.icon
-        a(href='#')
-          span(title='instagram').instagram.icon
+  .copyright
+    .copyright__text Copyright © 2018 Toxin UI Kit. All rights reserved.
+    .social-bar
+      a(href='#')
+        span(title='twitter').twitter.icon
+      a(href='#')
+        span(title='facebook').facebook.icon
+      a(href='#')
+        span(title='instagram').instagram.icon
       
