--- a/src/pages/base.pug
+++ b/src/pages/base.pug
@@ -31,4 +31,38 @@ html(lang="ru")
           +button(data_button_register)
       
     block content
+
     block footer
+      include ./../components/logo/logo.pug
+      include ./../components/list-items/list-items.pug
+
+      -
+        var data_relation_1 = {title: 'Навигация', relations: ['О нас', 'Новости', 'Служба поддержки', 'Услуги']}
+        var data_relation_2 = {title: 'О нас', relations: ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы']}
+        var data_relation_3 = {title: 'Служба поддержки', relations: ['Соглашения', 'Сообщества', 'Связь с нами']}
+
+      footer.footer
+        .footer__logo
+          +logo('./src/components/logo/Logo-grad.svg')
+          .description Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды» 
+        
+        .footer__relation-lists
+          +relation-list(data_relation_1)
+          +relation-list(data_relation_2)
+          +relation-list(data_relation_2)
+       
+        .footer__subscribe
+          .subscribe
+            h3.subscribe__title Подписка
+            p Получайте специальные предложения и новости сервиса
+            input(type='text' name='email')
+
+        .copyright
+          .copyright__text Copyright © 2018 Toxin отель. Все права зачищены.
+          .social-bar
+            a(href='#')
+              span(title='twitter').twitter.icon
+            a(href='#')
+              span(title='facebook').facebook.icon
+            a(href='#')
+              span(title='instagram').instagram.icon
