--- a/src/pages/base.pug
+++ b/src/pages/base.pug
@@ -1,6 +1,7 @@
 doctype html
 html(lang="ru")
   head
+    meta(charset="utf-8")
     title Landing page
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
   body
